# xime-eink

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/kingzcheung/xime/settings/: SettingsPreferencesTest.kt
app/src/androidTest/java/com/kingzcheung/xime/ui/: CandidateBarTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xime.yaml
app/src/main/assets/rime/: default.yaml  double_pinyin_flypy.schema.yaml
app/src/main/java/com/kingzcheung/kime/clipboard/: ClipboardManager.kt
app/src/main/java/com/kingzcheung/kime/service/: InputUIState.kt  KimeInputMethodService.kt
app/src/main/java/com/kingzcheung/kime/settings/: SettingsPreferences.kt
app/src/main/java/com/kingzcheung/kime/ui/: KeyButton.kt  KeyboardLayout.kt  KeyboardResizeOverlay.kt  KeyboardView.kt  NumberKeyboardLayout.kt  SpaceKeyButton.kt
app/src/main/java/com/kingzcheung/xime/: MainActivity.kt  XimeApplication.kt
app/src/main/java/com/kingzcheung/xime/clipboard/: ClipboardManager.kt
app/src/main/java/com/kingzcheung/xime/rime/: RimeEngine.kt
app/src/main/java/com/kingzcheung/xime/service/: InputUIState.kt  PredictionManager.kt  XimeInputMethodService.kt
app/src/main/java/com/kingzcheung/xime/settings/: EncryptedSettings.kt  SettingsPreferences.kt
app/src/main/java/com/kingzcheung/xime/ui/: AboutScreen.kt  CandidateBar.kt  CandidatePage.kt  ClipboardView.kt  EmojiKeyboardLayout.kt  KeyButton.kt  KeyboardLayout.kt  KeyboardRoute.kt  KeyboardView.kt  LogViewerScreen.kt  MenuBar.kt  NumberKeyboardLayout.kt  PluginsSettingsScreen.kt  SchemaListView.kt  SettingsComponents.kt  SettingsScreen.kt  SmartPredictionSettingsScreen.kt  SpaceKeyButton.kt  SplitKeyboardLayout.kt  SplitWordsView.kt  ToolbarButton.kt  ToolbarCustomizeView.kt
app/src/main/java/com/kingzcheung/xime/ui/settings/: DictionarySettingsScreen.kt  SchemaSettingsScreen.kt  SettingsMainScreen.kt  SettingsRoutes.kt  ThemeSettingsScreen.kt  WebDavSyncScreen.kt
app/src/main/java/com/kingzcheung/xime/ui/theme/: Color.kt  KeyboardTheme.kt  Theme.kt
app/src/main/java/com/kingzcheung/xime/update/: UpdateChecker.kt
app/src/main/java/com/kingzcheung/xime/viewmodel/: AboutViewModel.kt  DictionarySettingsViewModel.kt  KeyEffectSettingsViewModel.kt  LogViewerViewModel.kt  PluginsSettingsViewModel.kt  PunctuationModelViewModel.kt  SchemaSettingsViewModel.kt  SmartPredictionSettingsViewModel.kt  ThemeSettingsViewModel.kt
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/cmake/: Boost.cmake  FindBoost.cmake
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: method.xml
docs/: features.md
docs/features/: deployment.md  smart-prediction.md  speech-to-text.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
